# tauri-shinylive-harness

./: .gitignore  AGENTS.md  LICENSE  README.ja.md  README.md  THIRD_PARTY_NOTICES.md  harness.toml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/harness-server/: Cargo.toml
crates/harness-server/src/: lib.rs
crates/harness-server/tests/: http_security.rs
docs/: app-assets-contract.md  cdisc-boundary.md  cdisc-bridge-for-clinical-users.md  cdisc-mapping.md  cdisc-roadmap.md  clinical-audience-guide.md  clinical-data-contract.md  clinical-demo-data-pack.md  clinical-review-answer-key.md  clinical-review-exercises.md  clinical-reviewer-quickstart.md  clinical-use-limitation.md  data-handling-boundary.md  data-manager-quickstart.md  demo-data-manager-10min.md  demo-medical-monitor-10min.md  demo-safety-review-10min.md  demo-script.md  evidence-guide-for-clinical-reviewers.md  evidence-guide-for-qa.md  external-validation-import.md  json-schema-subset.md  manual-clean-macos-checklist.md  manual-clean-windows-checklist.md  medical-monitor-quickstart.md  phase3-distribution.md  phi-pii-policy.md  qa-validation-quickstart.md  quickstart.md  release-and-source-packaging.md  release-template.md  report-export.md  sample-release-evidence.md  scenario-chronic-disease.md  scenario-oncology-safety.md  scenario-subject-profile.md  scenario-vaccine-reactogenicity.md  security-threat-model.md  spec.md  stat-programmer-quickstart.md  (+3 more)
mappings/: cdisc-demo-mapping.json
regulated/: README.md
schemas/: cdisc-mapping.schema.json  clinical-data-pack.schema.json  harness.schema.json
scripts/: cache-shinylive-assets.R  cdisc-preflight.mjs  clean-dist.mjs  clean-tauri-bundles.mjs  clinical-data-pack-validator.mjs  (+27 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs
(+93 files in other folders)
