[package]
name = "tauri-shinylive-harness"
version = "0.8.0"
description = "Tauri Shinylive localhost harness"
authors = ["Codex"]
edition = "2021"

[lib]
name = "tauri_shinylive_harness_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tauri-shinylive-harness"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
harness-server = { path = "../crates/harness-server" }
tauri = { version = "2.9.5", features = [] }
tokio = { version = "1.48.0", features = ["fs", "net", "rt-multi-thread"] }
url = "2.5.7"
