[package]
name = "harness-server"
version = "0.9.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.7" }
http = "1.3.1"
percent-encoding = "2.3.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["fs", "macros", "net", "rt-multi-thread"] }
