[package]
name = "harness-server"
version = "0.9.1"
edition = "2021"

[[bin]]
name = "harness-server"
path = "src/bin/harness-server.rs"

[dependencies]
axum = { version = "0.8.7" }
http = "1.3.1"
percent-encoding = "2.3.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread"] }
